--- a/Css/spots.css
+++ b/Css/spots.css
@@ -56,7 +56,7 @@ header {
 }
 
 .nav-links a:hover {
-    color: #0073e6; /* Highlight color on hover */
+    color: #358856; /* Highlight color on hover */
 }
 
 .event-hero {
@@ -141,7 +141,7 @@ header {
 }
 
 .spots-page h2 {
-    color: #102a43;
+    color: #358856;
     font-weight: 700;
     font-size: 1.5rem;
     margin-bottom: 20px;
@@ -157,13 +157,13 @@ header {
     transform: translateY(-50%);
     width: 6px;
     height: 24px;
-    background: #0073e6;
+    background: #25523B;
     border-radius: 3px;
 }
 
 .description {
     line-height: 1.8;
-    color: #486581;
+    color: black;
 }
 
 .features-list {
@@ -180,12 +180,12 @@ header {
     padding: 10px 15px;
     border-radius: 8px;
     font-size: 0.95rem;
-    color: #334e68;
+    color: black;
     font-weight: 500;
 }
 
 .features-list li::before {
-    content: '🛹';
+    content: '✔️';
     margin-right: 10px;
     font-size: 1.2rem;
 }
@@ -200,7 +200,7 @@ header {
     padding-left: 45px;
     margin-bottom: 15px;
     line-height: 1.6;
-    color: #486581;
+    color: black;
 }
 
 .rules-list li::before {
@@ -211,7 +211,7 @@ header {
     top: 0;
     width: 30px;
     height: 30px;
-    background: #0073e6;
+    background: #25523B;
     color: white;
     font-weight: 600;
     font-size: 0.9rem;
@@ -532,7 +532,7 @@ header {
     display: inline-block;
     margin: 15px 0 20px;
     padding: 8px 16px;
-    background-color: #2c3e50;
+    background: linear-gradient(90deg, #25523B, #358856);
     color: white;
     text-decoration: none;
     border-radius: 5px;
