--- a/Css/eventPages.css
+++ b/Css/eventPages.css
@@ -16,6 +16,27 @@ header {
     z-index: 1000;
 }
 
+.status-msg {
+    padding: 12px;
+    margin-top: 15px;
+    border-radius: 6px;
+    font-size: 0.9rem;
+    text-align: center;
+    display: none;
+}
+
+.status-msg.error {
+    background-color: #fee2e2;
+    color: #991b1b;
+    border: 1px solid #f87171;
+}
+
+.status-msg.success {
+    background-color: #dcfce7;
+    color: #166534;
+    border: 1px solid #4ade80;
+}
+
 /* Navbar */
 .navbar {
     display: flex;
